--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,17 @@ body {
     margin-top: 250px;
     margin-bottom: -50px
 }
+
+.larger-badge {
+    padding: 0.8em 1.2em;
+    font-size: 1.1em;
+}
+
+.skill-heading {
+    text-align: center;
+    margin-bottom: 0px;
+    font-weight: bold;
+    font-size: x-large;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color:brown;
+}
